making other page

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ assets:
     css: true
     js: true
 
+sass:
+  sass_dir: assets/css
+  style: compressed
+
 
 # Owner/author information
 owner:
