--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,14 @@
 
 name: "Jelle Kuiper | Trouwambtenaar"
 description: "Voor een leuke trouwdag"
-url: webnozems.nl
+url: https://jellekuiper.nl
 keywords: "trouwen jellekuiper jelle kuiper amsterdam" 
 author:
   name: jellekuiper
   email: info@jellekuiper.nl
+  bio:  "Strategisch adviesbureau voor zorgondernemers."
+  email:  info@jellekuiper.nl
+  twitter:  jelle_kuipernl
 encoding: utf-8
 timezone: Europe/Amsterdam
 
@@ -25,15 +28,6 @@ assets:
 sass:
   sass_dir: assets/css
   style: compressed
-
-
-# Owner/author information
-owner:
-  name: Jelle Kuiper
-  avatar: avatar.jpg
-  bio:  "Strategisch adviesbureau voor zorgondernemers."
-  email:  info@jellekuiper.nl
-  twitter:  jelle_kuipernl
 
 # exclude: ['img', 'pdf', 'css', 'js', 'fonts', 'bower_components', 'node_modules', '**.png', '**.jpg', '**.jpeg', '**.gif', '**.webp', '**.svg', '**.ico']
 keep_files: ['img', 'pdf']
