removed the reference blocks

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 name: "Jelle Kuiper | Trouwambtenaar"
 description: "Voor een leuke trouwdag"
-url: https://jellekuiper.nl
+url: https://webnozems.nl
 keywords: "trouwen jellekuiper jelle kuiper amsterdam" 
 author:
   name: jellekuiper
