--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-gm": "0.0.9",
     "gulp-htmlmin": "^3.0.0",
     "gulp-image": "^4.3.0",
+    "gulp-image-resize": "^0.13.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-inject": "^4.3.0",
     "gulp-min": "0.0.2",
