--- a/app/_data/bedrijfsoptredens.yml
+++ b/app/_data/bedrijfsoptredens.yml
@@ -1,10 +1,8 @@
-- text: hoezee!!! bedrijfsoptredens
+- text: Bedrijfsoptrensaaaans
   name: Conny & Roela
-- text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van d
-  name: Conny & Roel
-- text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles.
-  name: Conny & Roel
-- text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles.
-  name: Conny & Roel
-- text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles.
-  name: Conny & Roel      
+- text: Jouw ceremonie was een g en zette meteen de toon voor de rest van d
+  name: Connywella
+- text: Jouw ceremonie was een g meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles. eweldige start van onze dag en zette eweldige start van onze dag en zette eweldige start van onze dag en zette eweldige start van onze dag en zette zette eweldige start van onze dag en zette eweldige start van onze dag en zette
+  name: Joep
+- text: dit is een geode grap
+  name: henk
