--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-min": "0.0.2",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-remove-files": "0.0.3",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
