building new version

--- a/app/_data/bedrijfsoptredens.yml
+++ b/app/_data/bedrijfsoptredens.yml
@@ -1,8 +1,6 @@
-- text: Bedrijfsoptrensaaaans
-  name: Conny & Roela
-- text: Jouw ceremonie was een g en zette meteen de toon voor de rest van d
-  name: Connywella
-- text: Jouw ceremonie was een g meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles. eweldige start van onze dag en zette eweldige start van onze dag en zette eweldige start van onze dag en zette eweldige start van onze dag en zette zette eweldige start van onze dag en zette eweldige start van onze dag en zette
-  name: Joep
-- text: dit is een geode grap
-  name: henk
+- text: "Ha Jelle, Ontzettend bedankt voor je bijdrage aan onze Buurtendag. Zoals ik stiekem wel verwacht had (en jij natuurlijk bij voorbaat al wist) was het een groot succes. Heel veel positieve reacties gehoord."
+  name: "Buurkracht"
+- text: "Hoi Jelle, bij deze willen we je nogmaals hartelijk bedanken voor je bijdrage aan onze medewerkersdag.  Op een schaal van 5 scoort je fake speech een 4 (je hoort bij de twee hoogste scores);  een prachtig resultaat. De “wandelgang” geluiden waren ook zeer positief. Nogmaals dank en wellicht tot ziens!"
+  name: "UVW"
+- text: "Nogmaals dank voor je bijzonder leuke bijdrage aan onze personeelsbijeenkomst! We hebben heel veel leuke reacties ontvangen."
+  name: "GGD"
