--- a/app/_data/trouwambtenaar.yml
+++ b/app/_data/trouwambtenaar.yml
@@ -1,6 +1,6 @@
-- text: Trouweanbtenaar
-  name: jemoedaer
+- text: Hoe jij die spanning weg nam bij ons door een heel vlot en een perfect getimed verhaal te houden is onvergetelijk, niet alleen voor ons, maar ook onze gasten die overrompeld waren door deze gebeurtenis hadden niets dan lof over hoe je de ceremonie verzorgd had. Heel veel dank daarvoor.
+  name: Linda en Tibor
 - text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles.
   name: Conny & Roel
-- text: Jouw ceremonie was een geweldige start van onze dag en zette meteen de toon voor de rest van de dag. We waren verrast over je verhaal, grappen, timing maar ook op het juiste moment een serieuze noot, helemaal goed. Groot respect voor je talent. We hebben alleen maar leuke reacties gehad op je “optreden”.  Nogmaals bedankt voor alles.
-  name: Conny & Roel
+- text: WAUW wat hebben wij vorige week een prachtige dag gehad!!!  Vooral de ceremonie en alles daar om heen vonden wij heel bijzonder en dit alles kwam natuurlijk ook door jou aanwezigheid als trouwambtenaar. Dank daarvoor! Het paste precies in hoe wij het voor ogen hadden.  Wie weet tot ziens bij een bruiloft van een van onze gasten er zijn er genoeg nog niet getrouwd...
+  name: Titia en Mark
