--- a/package.json
+++ b/package.json
@@ -10,51 +10,32 @@
   "author": "Daniel",
   "license": "ISC",
   "homepage": "https://github.com/danielgroen/jellekuiper.github.io",
+  "browserslist": [
+    "last 2 versions",
+    "> 0.5%",
+    "not dead"
+  ],
   "devDependencies": {
+    "bower": "^1.8.4",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.8",
     "child_process": "^1.0.2",
-    "event-stream": "^3.3.4",
-    "gh-pages": "^1.1.0",
-    "github-pages": "^3.0.2",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-css-image-dimensions": "^1.1.5",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-gh-pages": "*",
-    "gulp-gm": "0.0.9",
-    "gulp-htmlmin": "^3.0.0",
+    "gulp-gh-pages": "git@github.com:tekd/gulp-gh-pages.git#update-dependency",
     "gulp-image": "^4.3.0",
     "gulp-image-resize": "^0.13.0",
-    "gulp-imagemin": "^3.4.0",
-    "gulp-inject": "^4.3.0",
-    "gulp-min": "0.0.2",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-remove-files": "0.0.3",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace": "^0.6.1",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
-    "gulp-sass-globbing": "0.0.2",
-    "gulp-style-inject": "^0.1.0",
-    "gulp-uglify": "^2.0.1",
-    "imagemin-jpeg-recompress": "^5.1.0",
-    "imagemin-mozjpeg": "^7.0.0",
-    "jekyll": "^3.0.0-beta1",
-    "jpegoptim-bin": "^4.0.0",
     "main-bower-files": "^2.13.1",
-    "require-dir": "^1.0.0",
-    "sass-strip-unit": "^1.0.0",
-    "singularitygs": "^1.7.1",
-    "stream-series": "^0.1.1",
-    "util": "^0.10.4",
-    "webfontloader": "^1.6.28"
-  },
-  "dependencies": {
-    "gm": "^1.23.1",
-    "sharp": "^0.20.3"
+    "require-dir": "^1.0.0"
   }
 }
