--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.10.0",
     "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-css-image-dimensions": "^1.1.5",
-    "gulp-gh-pages": "git@github.com:tekd/gulp-gh-pages.git#update-dependency",
+    "gulp-gh-pages": "git+ssh://git@github.com/tekd/gulp-gh-pages.git#update-dependency",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-image": "^4.3.0",
     "gulp-image-resize": "^0.13.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-remove-files": "0.0.3",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
+    "gulp-uglify": "^3.0.1",
     "main-bower-files": "^2.13.1",
     "require-dir": "^1.0.0"
   }
