--- a/app/_data/bedrijfsoptredens.yml
+++ b/app/_data/bedrijfsoptredens.yml
@@ -1,6 +1,54 @@
-- text: "Ha Jelle, Ontzettend bedankt voor je bijdrage aan onze Buurtendag. Zoals ik stiekem wel verwacht had (en jij natuurlijk bij voorbaat al wist) was het een groot succes. Heel veel positieve reacties gehoord."
-  name: "Buurkracht"
-- text: "Hoi Jelle, bij deze willen we je nogmaals hartelijk bedanken voor je bijdrage aan onze medewerkersdag.  Op een schaal van 5 scoort je fake speech een 4 (je hoort bij de twee hoogste scores);  een prachtig resultaat. De “wandelgang” geluiden waren ook zeer positief. Nogmaals dank en wellicht tot ziens!"
-  name: "UVW"
-- text: "Nogmaals dank voor je bijzonder leuke bijdrage aan onze personeelsbijeenkomst! We hebben heel veel leuke reacties ontvangen."
-  name: "GGD"
+- optreden: "Achmea"
+- optreden: "AMC"
+- optreden: "Aegon"
+- optreden: "Agis Zorgverzekeringen"
+- optreden: "Albert Heijn"
+- optreden: "Atos Consulting"
+- optreden: "BAM"
+- optreden: "BDO Camps Obers"
+- optreden: "Beatrixtheater"
+- optreden: "Beatrix Fonds"
+- optreden: "Bovag"
+- optreden: "Bouwend Nederland"
+- optreden: "Brandweer"
+- optreden: "Campina"
+- optreden: "CBS"
+- optreden: "Commit"
+- optreden: "Deloitte"
+- optreden: "Defensie"
+- optreden: "Ernst en Young"
+- optreden: "Formido"
+- optreden: "FrieslandCampina"
+- optreden: "vele Gemeenten"
+- optreden: "GGD"
+- optreden: "Hypotheek Shop"
+- optreden: "Interpolis"
+- optreden: "Kadaster"
+- optreden: "Kenteq"
+- optreden: "Kluwer"
+- optreden: "KPN"
+- optreden: "KPMG"
+- optreden: "KWF Kankerbestreiding"
+- optreden: "Mercedes Benz"
+- optreden: "Ministerie van Financien"
+- optreden: "Ministerie van Verkeer en Waterstaat"
+- optreden: "Ministerie van Economische zaken"
+- optreden: "Ministerie van Binnenlandse zaken"
+- optreden: "Nibra"
+- optreden: "Oranjewoud"
+- optreden: "Philips"
+- optreden: "PON"
+- optreden: "Postkantoren"
+- optreden: "PriceWaterhouceCoopers"
+- optreden: "Rabobank"
+- optreden: "ROC"
+- optreden: "Rijkswaterstaat"
+- optreden: "Sodexho"
+- optreden: "Sogeti"
+- optreden: "T-mobile"
+- optreden: "TNT"
+- optreden: "Topticketline"
+- optreden: "Universiteit Amsterdam"
+- optreden: "Universiteit Tilburg"
+- optreden: "UWV"
+- optreden: "VVV"
