--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-  "name": "daniel groen",
+  "name": "daniel",
   "description": "site studioginger.nl",
   "main": "gulpfile.js",
   "authors": [
-    "daniel groen <groendaniel@live.nl>"
+    "<groendaniel@live.nl>"
   ],
   "license": "ISC",
   "homepage": "http://www.studioginger.nl",
   "dependencies": {
     "singularity": "singularitygs#^1.7.1",
-    "owl.carousel": "^2.2.1"
+    "owl.carousel": "^2.2.1",
+    "rellax": "*"
   }
 }
