fixing the menu

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # cname veranderd mee met de url
 url: https://webnozems.nl
-name: "Jelle Kuiper | Trouwambtenaar"
+name: "Jelle Kuiper"
 description: "Voor een leuke trouwdag"
 language: 'nl/nl'
 keywords: "trouwen jellekuiper jelle kuiper amsterdam"
