--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-#development
-url: http://jellekuiper.sven
-
 #staging
-# url: http://webnozems.nl
+url: http://webnozems.nl
 
 #production
 # url: http://jellekuiper.sven
