--- a/app/_data/testimonials.yml
+++ b/app/_data/testimonials.yml
@@ -143,6 +143,97 @@ trouwambtenaar:
     name: "Rob en Inge"
   - text: "Het was een geweldige dag, met als hoogtepunt de ceremonie. Je hebt het echt super leuk gedaan!"
     name: "Inge en Bas"
+# duplicates from here:
+  - text: "Wat heb je het leuk gedaan, Jelle. We hebben en top feest gehad. Er kwamen zelfs getrouwde mensen naar ons toe dit dit de leukste ceremonie ooit vonden! :)"
+    name: "George en Eva"
+  - text: "Super bedankt!! Wij vonden het echt helemaal te gek!"
+    name: "Hylke en Rachel"
+  - text: "Wat bijzonder, wat ontzettend vermakelijk/volle aandacht voor een ieder, velen van de aanwezigen \"hoe zijn jullie hem op het spoor gekomen\" iemand die zo z'n vak verstaat zo ons heeft geboeid, bewonderenswaardig zo partijen te betrekken bij dit prachtig paar (woorden van anderen, maar we vinden dat ook wel). Chapeau, ga zo door Jelle het was bijzonder van de 1e tot de laatste minuut, maar ook onze ontmoeting in Amsterdam. Namens Ingrid en mijzelf buitengewoon dank en hopen je weer te mogen inroepen bij de volgende viering (op naar 50)"
+    name: "Piet en Ingrid"
+  - text: "Bedankt voor de ontzettend leuke ceremonie. We kregen veel positieve reacties. We vonden het ook erg mooi zoals je ons verhaal verwoorde. Fijn en luchtig. Dankjewel."
+    name: "Dennis en Rianne"
+  - text: "Bedankt voor de leuke ceremonie! Het was heerlijk ontspannen en wat geweldig dat Sym mocht hameren! Nogmaals dank en wie weet tot ziens."
+    name: "Iris en Jeroen"
+  - text: "Het was super. Wat een energie, wat een enthousiastme en wat een geweldige reacties tijdens de ceremonie en ook de hele avond na afloop. Mensen waren zoo enthousiast!"
+    name: "Cecile en Evert"
+  - text: "Het was fantastisch gisteren! Iedereen was super enthousiast over je optreden en ze vroegen allemaal waar we je vandaan hadden. Dankje dankje dankjewel!"
+    name: "François en Hester"
+  - text: "Bijna een maand geleden hadden we de mooiste dag van ons leven en jij bent daar een erg belangrijk onderdeel van geweest. Wij en iedereen die ik erover heb gesproken, hadden nog nooit zo’n ceremonie meegemaakt! Echt geweldig. Ik ben je erg dankbaar."
+    name: "Jessica en Floris"
+  - text: "Jelle je was echt heel goed! We hebben van iedere minuut genoten en zijn ontzettend blij dat je ons getrouwd hebt. We wilden graag een onvergetelijke ceremonie en die hebben we gekregen ook. En dat vonden wij niet alleen, maat alle aanwezigen ook. We hebben alleen maar positieve reacties gehoord. De meesten gaven aan het woord 'BABS' nooit meer te vergeten en echt iedereen heeft genoten en ontzettend gelachen. Een heleboell zeiden zelfs dat ze het jammer vonden dat ze jou niet als ambtenaar hadden bij hun eigen huwelijk. Dus op alle fronten helemaal goed, onze complimenten! En wellicht dat jullie er in de toekomst nog nieuwe klanten aan overhouden... er zijn er ten slotte nog een aantal niet getrouwd."
+    name: "Leo en Yvonne"
+  - text: "We willen jou nog even bedanken voor de onvergetelijke ceremonie van onze trouwdag afgelopen vrijdag. Het was echt heel bijzonder op deze manier en locatie. We hebben hele leuke reacties gehad!"
+    name: "Hilda en Bouke"
+  - text: "Wij wilden jou van harte bedanken voor de zeer bijzondere manier waarop jij de ceremonie hebt ingevuld. Wij vonden het geweldig. In combinatie met de Jazz band, de locatie en het goede weer overtrof de ceremonie onze verwachtingen. Super dus en enorm bedankt!"
+    name: "Rolf en Maureen"
+  - text: "Wat was het geweldig 2 september! We genieten nog elke dag van de superdag die wij hebben gehad. Dankzij jouw bijdrage heb je de beladenheid van deze dag weggenomen waardoor wij en de gasten een ontspannen dag hebben gehad. Wij zijn jouw hiervoor erg dankbaar!"
+    name: "Anton en Krista"
+  - text: "We zijn net terug uit Venetië en willen jou graag nog even bedanken voor jouw geweldige bijdrage aan onze huwelijksdag. Ik denk dat als we jou niet hadden gevraagd als babs dat we die zure dame hadden gekregen, die nogal haast had, oeffff, dat was een compleet andere ceremonie geworden, zo blij dat we dat niet gedaan hebben!!! Geweldige reacties gehad van iedereen over jou en ons feest was ook super, alles ging direct los, de sfeer zat er natuurlijk al lekker in. Nu weer terug op aarde en weer verder met waar we waren gebleven, met een rugzak vol nieuwe mooie herinnneringen en een lege portemonnee, om nooit meer te vergeten."
+    name: "Doeko en Ginette"
+  - text: "Hier even een bericht van het pas getrouwde stel. WAT DEED JE HET LEUK ZATERDAG!!!  Echt een ontspannen begin van een hele leuke dag. Iedereen vond het echt fantastisch. Dus, helemaal super. Echt heel erg bedankt voor je performance. Je toga was ook echt geweldig. We hebben inmiddels al wat foto's ontvangen en raken zelf maar niet uitgepraat over het weekend."
+    name: "Manda en Peter"
+  - text: "Dank voor je bijdrage gisteren. Wij hebben zo genoten en van iedereen hele leuke reacties gehad. Het was precies zoals we gehoopt hadden.  Nogmaals dank en wij genieten nog even na ;-)"
+    name: "Hans en Nina"
+  - text: "We zijn weer thuis en met onze voetjes op de grond. Wat een fantastische dag was het en mede dankzij jou! Iedereen had het over je: wat was de ambtenaar van de burgerlijke stand leuk, hij zou stand up comedian moeten worden, of, was het nou een grap of zijn jullie echt getrouwd? Zo'n leuke ceremonie hebben we nog nooit meegemaakt, echt iets voor jullie. En dat was ook zo. Ik ken er in ieder geval niet een die zo leuk was als de onze! hahahaha. Nu weer een beetje bijkomen. Groetjes en heeeel heeel hartelijk dank voor je prachtige, persoonlijke en humorvolle ceremonie. Het was fantastisch."
+    name: "Ivonne en Henk"
+  - text: "Gisteren was het dan eindelijk zover onze Trouwdag. De verwachtingen waren hoog gespannen, want alles zat ons op deze dag mee. Het weer was prachtig, iedereen aanwezig en de rest liep op rolletjes. En toen moest het echte trouwmoment nog komen. De aanwezige gasten wisten toen nog niet dat het een zeer bijzondere en speciale ceremonie zou gaan worden. Maar vanaf de allereerste zin zat iedereen geboeid te luisteren en was de toon gezet. Eerst vroegen mensen zich nog af of dit er wel bij hoorde, maar al gauw ontstond er een luid gelach in de zaal. Wij kunnen je niet genoeg zeggen hoe ongelofelijk mooi en ontroerend dit moment voor ons is geweest. Wij zullen hier nog lang op terug kijken als een van de hoogte punten van onze dag. En er zal nog lang over gesproken worden, want er waren zoveel mensen die het prachtig hebben gevonden. Dus Jelle bedankt voor alles en hopelijk tot ziens op e en volgende bruiloft."
+    name: "Sylvana en Jordy"
+  - text: "Fantastisch zoals je onze huwelijksvoltrekking hebt gedaan afgelopen vrijdag. Iedereen, inclusief onzelf, waren enorm verrast over jou manier van presenteren. Geweldig gewoon! Er zal de komende tijd nog heel wat over gesproken gaan worden."
+    name: "Henk en Loetje"
+  - text: "ENORM bedankt voor de prachtige ceremonie! Wij hebben er zo enorm van genoten en alleen maar leuke en enthousiaste reacties gehoord van onze gasten."
+    name: "Anouk en Shafton"
+  - text: "Bij deze willen we je even bedanken voor de geweldige dag gisteren! Wij en onze vrienden en familie vonden het erg leuk dat jij onze trouwambtenaar was, we hebben erg gelachen!!"
+    name: "Astrid en Stefan"
+  - text: "Bedankt voor je aandeel in onze grote dag gisteren. Het was super! Heel veel complimenten ook van de gasten gekregen."
+    name: "Andries en Nienke"
+  - text: "Het was alles behalve saai, moeizaam, stijf of volgens de standaard etiquette, dat gewoonweg niet bij ons past! Door jouw komst werd ons huwelijk heerlijk eigenwijs, vol humor, maar wel weer volledig afgestemd op ons verhaal en passend bij onze groep. Het was een hele kleine setting met alleen broers, zussen, ouders, getuigen en veel, heel veel kinderen. Wij vonden het zelf een enorme uitdaging daar iets leuks van te maken, maar jij had er alle vertrouwen in en dat liet je ons al weten in de voorgesprekken. We wisten dat onze gasten het zouden waarderen als de ceremonie een humoristische insteek zou hebben. Maar dat ze het allemaal zo ontzettend leuk en bijzonder zouden vinden, dat was toch wel super om te horen. Wij willen je enorm bedanken dat je ons huwelijk die hele speciale, ongedwongen, hilarische en vooral gedenkwaardige twist hebt gegeven. Ze waren het er allemaal over uit: zo zou een bruiloft eigenlijk altijd moeten zijn! Geweldig!"
+    name: "Vincent en Helene"
+  - text: "Na een lange tijd op een roze wolk geleefd te hebben, zijn we nu weer met beide benen op aarde geland ;-)  En we willen je dan ook nog even hartelijk bedanken voor de ontzettend leuke ceremonie. We hebben de gehele dag alleen maar leuke en enthousiaste reacties gehad. Inmiddels is de video ook af en het is ontzettend leuk om terug te zien. Je hebt echt fantastisch aangevoeld welke grappen gemaakt kunnen worden en welke net niet. En daarnaast ook een goede balans in grappige momenten en serieuze momenten!! Echt super."
+    name: "Rinske en Jan Derk"
+  - text: "We hebben een heerlijke vakantie gehad en eerlijk gezegd denken we elke dag nog wel even terug aan onze fantastische bruiloft. Wat was het mede dankzij jou een geweldige dag!! Wij vonden de ceremonie helemaal geweldig. Vreselijk gelachen en gelukkig geen stijf en formeel 'gedoe'. Ook onze gasten vonden het super. We hebben veel complimentjes gehad over de ceremonie en er werd stevig geinformeerd waar we jou gevonden hadden *grinnik*. Bedankt voor jouw bijdrage aan onze bruiloft!"
+    name: "Karin en Viktor"
+  - text: "We zijn ontzettend blij dat jij ons huwelijk hebt voltrokken. Het was een groot succes. Iedereen vondt dat je cabaratier moest worden:)  Veel liefs en geluk!"
+    name: "Marcel en Carola"
+  - text: "We willen we je nog heel hartelijk bedanken voor het sluiten van ons huwelijk! Het was nog veel leuker dan we gehoopt hadden! Onze gasten waren ook helemaal enthousiast, wat een leuke ceremonie!  Super bedankt!"
+    name: "Pascal en Sylvia"
+  - text: "Je zal het vast vaker horen, maar je optreden van gisteren was in één woord fantastisch! We zitten nog steeds na te stuiteren van de dag! Het was precies zoals we het ons hadden voorgesteld. Een spontane en voor iedereen onverwachte opening van de avond. Een overgang van een klassieke locatie, klassieke zaal, pompeuze muziek en dan.......de sfeer die je hebt neergezet is er tot het einde ingebleven.  De zaal vond het leuk en alle voor ons belangrijke dingen zijn in je verhaal naar voren gekomen. En wat we knap vinden is dat je er geen \"Jelle show\" van maakt maar het echt ons feest is geweest. Vandaag zijn door de verschillende familieleden verschillende stukken van je verhaal weer opgehaald. En we hebben er weer om gelachen...bijna net zo hard als op één van je foto's.\n\nDe meest grappige opmerkingen achteraf:\n\n\"Dat die gozer nog bij de gemeente werkt...\"\n\n\"Het leek wel een cabaretier...\"\n\nEn natuurlijk het beste compliment:\n\n\"ik wou dat ik van zoiets wist toen ik ging trouwen\" en  \"als ik opnieuw mocht trouwen zo ik het ook zo willen...\"\n\nNogmaals: heel, heel hartelijk bedankt. Je bijdrage is voor ons onvergetelijk en heeft de avond vanaf minuut 1 het feestelijke gevoel gegeven wat we graag wilden..."
+    name: "Harry en Sabine"
+  - text: "We zijn net terug van onze huwelijksreis. We wilden je nog even hartelijk bedanken want het was helemaal top! De hele dag hebben we van iedereen gehoord dat ze het helemaal geweldig vonden, een ambtenaar in deze stijl. Niemand die negatief heeft gereageerd maar wat eigenlijk het belangrijkste is: wij vonden het ook helemaal zoals we gehoopt hadden!"
+    name: "Daniel en Jenny"
+  - text: "Via deze willen wij je hartelijk danken voor de super leuke huwelijksvoltrekking! Hier zijn zijn erg veel leuke reacties op gekomen. Onze vrienden waren inderdaad “Flabbergasted” en waren verrast dat wij ze toch weer in een overtreffende trap hebben kunnen verassen! Kortom de avond is super verlopen. Nou wij gaan langzaam aan onze voorbereiding starten op de wereldreis naar Terschelling. Rest ons nog je heel succes en plezier te wensen met je werkzaamheden."
+    name: "Petra en Mark"
+  - text: "Hartstikke bedankt voor de geweldige ceremonie! Iedereen heeft er van genoten, niet in de laatste plaats wij zelf. En hoe kon je ze er uit pikken: onze buren (13 jaar samen, niet getrouwd) en mijn collega (2 dagen geleden getrouwd). Ze geloofden niet dat wij het je echt niet ingefluisterd hadden. Wij zijn in ieder geval niet alleen leuk getrouwd, maar ook geweldig getrouwd! Nogmaals hartstikke bedankt!"
+    name: "Mark en Jeanine"
+  - text: "Wij vertrekken zo op huwelijksreis, maar willen je nog even bedanken voor de ceremonie afgelopen zaterdag. Ik heb welgeteld 117 complimenten over jou in ontvangst genomen, oftewel die van alle gasten. Ongelooflijk, maar iedereen was laaiend enthousiast over de ceremonie, niemand uitgezonderd. Grappig, heel interactief en op een hele leuke manier hebben mensen een inzicht gekregen in ons leven. De combinatie van jou en de band heeft voor een unieke, ongedwongen, positieve sfeer gezorgd, waarvoor wij je zeer dankbaar zijn. Meerdere gasten van ons zouden graag hun bruiloft overdoen, maar dan op deze manier. Andere gasten van ons hebben nooit nagedacht over trouwen, maar op deze manier zouden ze het toch wel heel leuk vinden. Steek ze in je zak zou ik zeggen. Wij gaan nu lekker genieten van onze huwelijksreis!"
+    name: "Jeroen en Femke"
+  - text: "Inmiddels al weer een week na dato willen wij je ongelooflijk bedanken voor jouw aandeel in onze trouwdag. Wij hebben er ontzettend van genoten en aan de reakties van onze familie en vrienden te horen zij ook!!  Ik denk dat de manier waarop jij ons huwelijk hebt voltrokken iedereen heel lang bij zal blijven, echt uniek. Nogmaals super dank en wellicht ooit tot ziens!"
+    name: "Richard en Karin"
+  - text: "Vanmiddag zijn we teruggekomen van onze huwelijksreis naar België. We hebben een heerlijk weekje in een luxe villa achter de rug en staan weer met beide benen op de grond. Ons feest was fantastisch en niet in de laatste plaats door jouw ceremonie. Er is veel over je optreden gesproken, al tijdens het feest maar ook in de week daarna. Onze gasten vonden het allemaal fantastisch en wij ook! Een vriend van ons heeft zelfs een bevriende weddingplanner van jouw bestaan op de hoogte gebracht. Slechte weddingplanner eigenlijk, maar wel leuk dat je zelfs op die manier je bekendheid vergroot. En sommige van onze vrienden die ook nooit zo’n behoefte hebben gehad om te trouwen, komen nu maar eens met ons praten hoe we dit allemaal gedaan hebben. Maar wij hebben toch maar mooi de primeur. Hartstikke bedankt voor jouw fantastische toespraak. Je hebt echt de feeststemming gezet."
+    name: "Marije en Sebastiaan"
+  - text: "Complimenten voor gisteren! Wij hebben zeer genoten, en onze gasten ook. Iedereen vroeg waar wij jou vandaan hebben weten te halen! En opmerkingen als; dit is de leukste bruiloft die wij ooit hebben meegemaakt!!  Echt geweldig!! Thanks alvast en nogmaals, onze trouwdag was onvergetelijk mede ook dankzij jou!"
+    name: "Maschja en Geert-Jan"
+  - text: "Graag willen wij je via deze weg bedanken voor jouw aandeel in een geweldige ceremonie gisteren! De toon van de ceremonie was exact wat wij in onze gedachten hadden. Een ontroerende opening, een luchtige ceremonie, persoonlijke toespraakjes en een vrolijk eind. Wij hadden het ons niet beter kunnen wensen. We hebben jouw website inmiddels aan meerdere mensen doorgegeven, dus wie weet.. Niemand had ooit zo'n leuke ceremonie gezien! Maar dat hoor je vast wel vaker. Nogmaals dank voor je geweldige optreden!"
+    name: "Paul en Mieke"
+  - text: "Super bedankt voor deze onvergetelijke dag!! Iedereen vond het echt geweldig. \"die man had cabaretier moet worden\" Echt goede humor in de groep gestoken. Betere ambtenaar bestaat er niet. de mensen van het slot zelf vonden jou ook geweldig.\n\nNogmaals bedankt was echt te gek!"
+    name: "Joanne en Thijs"
+  - text: "Wat een fantastische trouwdag hebben we gehad. De sfeer was heerlijk relaxed en daaraan heb jij zeker een positieve bijdrage geleverd. De ceremonie was voor ons, onze kinderen en gasten verrassend, liefdevol, met een lach en een traan en onvergetelijk. Het was mooi om 'onze verhalen' uit jouw mond, met je eigen humorvolle manier, terug te krijgen. Vooral het zo mooi betrekken van onze kinderen bij de ceremonie was een gouden greep. Dank je wel hiervoor! We hebben erg genoten van het ceremonieel begin van ons huwelijk met vijf personen. Aan de reactie van onze gasten komen we je vast nog eens tegen als gast bij een volgend huwelijk. Tot dan Ellen en Mark, Selma, Cas en Stijn."
+    name: "Ellen en Mark"
+  - text: "We wilden je nog bedanken voor het leuke begin van onze avond. We hebben erg veel leuke reacties over jou gehad. En de sfeer zat er gelijk al in. Het is een super feest geworden. Precies zoals we bedacht hadden."
+    name: "Jan-Willem en Fanny"
+  - text: "We zijn alweer een weekje terug in Nederland, en we kijken terug op een fantastisch huwelijk. Mede door jouw! We krijgen aan de lopende band complimenten, zeker over jou!"
+    name: "Henk en Margriet"
+  - text: "We willen je ongelooflijk bedanken voor jouw aandeel in onze trouwdag. Wij hebben er ontzettend van genoten en aan de reacties van onze vrienden en familie te horen, zij ook!"
+    name: "Martijn en Yvonne"
+  - text: "We hebben ontzettend van je genoten en zullen hier met veel plezier aan terug denken."
+    name: "Mario en Petra"
+  - text: "We zijn alweer een weekje terug in Nederland, en kijken uit op een fantastisch huwelijk. Mede door jouw optreden!"
+    name: "Arjan en Manuela"
+  - text: "Vandaag vroeg wakker en nog helemaal vol van alle indrukken van gister. We vonden de ceremonie fantastisch, hele leuke reacties op gehad. Echt iets wat bij ons past. Heel erg bedankt daarvoor."
+    name: "Petra en Bas"
+  - text: "Wij, en heel veel van onze gasten, vonden je ge-wel-dig! Dit is sowieso iets om nooit te vergeten, maar jij hebt het nog meer bijzonder gemaakt! Je bent top, dankjewel voor de geweldige ceremonie!"
+    name: "Rob en Inge"
+  - text: "Het was een geweldige dag, met als hoogtepunt de ceremonie. Je hebt het echt super leuk gedaan!"
+    name: "Inge en Bas"
 
 bedrijfsoptredens:
   - text: "Ha Jelle, Ontzettend bedankt voor je bijdrage aan onze Buurtendag. Zoals ik stiekem wel verwacht had (en jij natuurlijk bij voorbaat al wist) was het een groot succes. Heel veel positieve reacties gehoord."
