--- a/app/_data/testimonials.yml
+++ b/app/_data/testimonials.yml
@@ -234,6 +234,14 @@ trouwambtenaar:
     name: "Rob en Inge"
   - text: "Het was een geweldige dag, met als hoogtepunt de ceremonie. Je hebt het echt super leuk gedaan!"
     name: "Inge en Bas"
+  - text: "Op 16 mei was het dan eindelijk zover. Wij zouden gaan trouwen en jij zou ons in de echt gaan verbinden. Wat was dat een onvergetelijk moment zoals jij dat hebt gedaan en verwoord. In een woord; SUPER! Ook alle aanwezigen waren super enthousiast. Enkele niet getrouwden onder ons willen jou in de toekomst ook als trouwambtenaar. Jelle, nogmaals onze dank en wat zijn wij blij dat wij onze trouwambtenaar wilde zijn."
+    name: "Robert en Yvonne"
+  - text: "Hey goedemiddag Jelle! De ceremonie was echt super! Enorm bedankt voor jouw bijdrage aan onze fantastische dag. We krijgen alleen maar positieve en enthousiaste reacties over jou!"
+    name: "Marijke en Udo"
+  - text: "Bedankt voor je mooie woorden gisteren!! We vonden de mix van humor, een traan, de aandacht voor ons en voor de gasten geweldig."
+    name: "Mike en Anne"
+  - text: "Bij deze willen wij je nog even onwijs bedanken voor de geweldige huwelijksvoltrekking op 15 april in het stadhuis van Leiden! We hebben echt gelachen en zullen mede hierdoor deze dag niet snel vergeten! Ook alle vrienden en familie waren, nadat ze van de eerste verbazing waren bekomen, ontzettend enthousiast!! Het interactieve, de humor, echt geweldig!"
+    name: "Marc en Ilona"
 
 bedrijfsoptredens:
   - text: "Ha Jelle, Ontzettend bedankt voor je bijdrage aan onze Buurtendag. Zoals ik stiekem wel verwacht had (en jij natuurlijk bij voorbaat al wist) was het een groot succes. Heel veel positieve reacties gehoord."
