--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: https://jellekuiper.nl
 
 name: "Jelle Kuiper"
-title: "De leukste trouwambtenaar!"
+title: "de leukste trouwambtenaar, cabaretier en theaterproducent."
 description: "Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent."
 language: 'nl/nl'
 keywords: "Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent."
