--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
-#staging
-# url: http://jellekuiper.sven
-
-#production
-url: https://jellekuiper.nl
-
 name: "Jelle Kuiper"
+url: 'https://jellekuiper.nl'
 title: "de leukste trouwambtenaar, cabaretier en theaterproducent."
 description: "Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent."
 language: 'nl/nl'
@@ -18,7 +13,7 @@ encoding: utf-8
 timezone: Europe/Amsterdam
 
 # folders
-baseurl:
+baseurl: ''
 source: ./app/
 destination: ./dist
 assets:
