--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Jelle Kuiper"
-url: 'https://jellekuiper.nl'
+url: 'http://jellekuiper.test'
 title: "de leukste trouwambtenaar, cabaretier en theaterproducent."
 description: "Jelle Kuiper, de leukste trouwambtenaar, cabaretier en theaterproducent."
 language: 'nl/nl'
