--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   "engines": {
     "node": ">=8.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gm": "^1.23.1",
+    "jekyll": "^3.0.0-beta1"
+  },
   "devDependencies": {
     "bower": "^1.8.4",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.8",
     "child_process": "^1.0.2",
     "gh-pages": "^3.1.0",
+    "guetzli": "^3.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
@@ -46,6 +50,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
     "gulp-uglify": "^3.0.1",
+    "imagemagick": "^0.1.3",
     "main-bower-files": "^2.13.1",
     "require-dir": "^1.0.0"
   }
