--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx gulp serve",
     "build": "npx gulp build",
     "gh-pages": "npm run build && node -e 'require(\"gh-pages\").publish(\"dist\", err => {} );'",
-    "deploy": "npm run gh-pages"
+    "deploy": "npm run build && npm run gh-pages"
   },
   "author": "Daniel",
   "license": "ISC",
